# radar_camera_fusion

./: CMakeLists.txt  README.md  config.json  run.sh
.cache/clangd/index/: cal_iou.h.8D63AFA9BA268C19.idx  hungarianAlg.cpp.75E2A1BD23952855.idx  hungarianAlg.h.A4004A4D180A37AD.idx  imm_ukf.cpp.FFDDC797F73E9F65.idx  imm_ukf.h.5FFF36BDACC01DA1.idx  main.cpp.918DD3873ACDB229.idx  readparam.h.D4370ED468816D72.idx  track.h.7AC5E6076B130435.idx  tracker.cpp.278CA696273A78FF.idx  tracker.h.1147DF491DA2BED7.idx  ukf.cpp.C1E046329EFEEB7B.idx  ukf.h.47D88E20BBEC2495.idx
data/: out-3.txt  small_session_camcam_out.txt  small_session_camcam_txt.txt  unit_test_camcam_out.txt  unit_test_camcam_txt.txt
graphs/: graphs.ipynb
plots/: graphs.ipynb  read_simulation.py
src/: detection.h  imm_ukf.cpp  jpda_tracker.cpp  jpda_tracker.h  main.cpp  param.cpp  param.h  readparam.h  tools.h  track.cpp  track.h  tracker.cpp  tracker.h  ukf.cpp  ukf.h
